<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="0.99"
        android:src="@drawable/icon_barcode_snip7" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/barcode_name"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:hint="@string/enter_name" />
   
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/barcode_number"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_12barcode" />

    <View
        android:id="@+id/viewSpace1"
        android:layout_width="fill_parent"
        android:layout_height="20dp" />
     
    <Button
        android:id="@+id/button3_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/save"
        android:soundEffectsEnabled="true"
        android:textColor="#f0f0f0"
		android:shadowColor="#000000"  
		android:shadowRadius="1.2"  
		android:shadowDx="1.2"  
		android:shadowDy="1.2" />

    <Button
        android:id="@+id/button5_cancel"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/cancel" />

</LinearLayout>